--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
+ISTANI Fitness Smart Calculator
 Micronized Creatine
-Watch on TikTok
-Learn about micronized creatine by watching our TikTok video. Click the link below to view it on TikTok.
-View the Micronized Creatine video on TikTok
-Micronized Creatine GP 4000
-Micronized creatine is a dietary supplement that may support energy production during short, intense exercise. It is one of the most researched supplements, but individual results can vary. Always consult a healthcare professional before starting any supplement regimen.
-Purchase through our Amazon affiliate link: Order Micronized Creatine GP 4000 on Amazon
+Micronized creatine is a well‑studied dietary supplement used to support energy production during short, high‑intensity exercise. Always consult a healthcare professional before starting any new supplement regimen.
+Watch our quick overview on TikTok: View video on TikTok .
+Purchase Micronized Creatine GP 4000
+Ready to try micronized creatine? Purchase through our Amazon affiliate link: Order Micronized Creatine GP 4000 on Amazon .
 Search Our Site
-Use this search box to find more articles and resources on fitness and supplementation:
+Use this search box to find more articles, videos, and resources on fitness and supplementation:
 
 Sponsored
 The ads below help support our site:
@@ -14,4 +13,3 @@ The ads below help support our site:
 
 Hire a Web Developer
 Sponsored by Fiverr. Affiliate link.
-Add initial website 
