--- a/index.html
+++ b/index.html
@@ -1,15 +1,118 @@
-ISTANI Fitness Smart Calculator
-Micronized Creatine
-Micronized creatine is a well‑studied dietary supplement used to support energy production during short, high‑intensity exercise. Always consult a healthcare professional before starting any new supplement regimen.
-Watch our quick overview on TikTok: View video on TikTok .
-Purchase Micronized Creatine GP 4000
-Ready to try micronized creatine? Purchase through our Amazon affiliate link: Order Micronized Creatine GP 4000 on Amazon .
-Search Our Site
-Use this search box to find more articles, videos, and resources on fitness and supplementation:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ISTANI Fitness – Smart Tools & Picks</title>
+  <meta name="description" content="ISTANI: science-based fitness tips, product recommendations, and smart calculators." />
+  <!-- AdSense script (load once in <head>) -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2695159317297870" crossorigin="anonymous"></script>
+  <!-- Google Custom Search Engine script -->
+  <script async src="https://cse.google.com/cse.js?cx=54401e2c0a6344dc5"></script>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; color: #333; background-color: #fff; line-height: 1.6; }
+    header { background-color: #f5f5f5; padding: 1rem 2rem; border-bottom: 1px solid #eee; }
+    h1 { margin: 0; font-size: 2rem; }
+    h2 { margin-top: 0; }
+    section { max-width: 900px; margin: 2rem auto; padding: 1rem 2rem; border-bottom: 1px solid #f0f0f0; }
+    a { color: #0066cc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>ISTANI Fitness Smart Calculator</h1>
+    <p>Your hub for science‑based fitness advice and trusted product picks.</p>
+  </header>
 
-Sponsored
-The ads below help support our site:
+  <!-- Nutricost micronized creatine affiliate section -->
+  <section>
+    <h2>Nutricost Micronized Creatine (Affiliate)</h2>
+    <p>Nutricost micronized creatine monohydrate is a pure supplement designed to support strength and high‑intensity training. Always consult a healthcare professional before starting any supplement.</p>
+    <!-- The following link leads to our TikTok affiliate video promoting the product. -->
+    <p><a href="https://www.tiktok.com/t/ZPHtrLf1wy1xB-CdVXH/" target="_blank" rel="sponsored noopener">Shop Nutricost Creatine via TikTok (affiliate)</a></p>
+  </section>
 
+  <!-- Jump starter affiliate section -->
+  <section>
+    <h2>Never Get Stuck on the Road</h2>
+    <p>The GP 4000 Jump Starter helps you restart your car without needing another vehicle. Purchasing through this affiliate link helps support our site.</p>
+    <p><a href="https://amzn.to/4mt95zr" target="_blank" rel="sponsored noopener">Buy GP 4000 Jump Starter (3% affiliate)</a></p>
+  </section>
 
-Hire a Web Developer
-Sponsored by Fiverr. Affiliate link.
+  <!-- Google custom search box -->
+  <section>
+    <h2>Search Our Site</h2>
+    <div class="gcse-search"></div>
+  </section>
+
+  <!-- AdSense ad unit section -->
+  <section>
+    <h2>Sponsored</h2>
+    <p>The ads below help support our work:</p>
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-2695159317297870"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </section>
+
+  <!-- Fiverr affiliate section -->
+  <section>
+    <h2>Need a Web Developer?</h2>
+    <p>Hire a professional to build or improve your website via Fiverr:</p>
+    <section style="max-width:980px;margin:24px auto;padding:16px;border:1px solid #e5e7eb;border-radius:12px;font-family:system-ui,Arial;display:grid;grid-template-columns:1fr 260px;gap:16px">
+      <a href="https://go.fiverr.com/visit/?bta=1141774&brand=fiverrmarketplace&utm_campaign=istaniorg&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fcategories%2Fprogramming-tech%2Fwebsite-development"
+         target="_blank" rel="sponsored noopener" style="display:block">
+        <img src="/images/webdev-hero.jpg"
+             alt="Find pro web developers on Fiverr"
+             style="width:100%;height:auto;border-radius:10px;display:block">
+      </a>
+      <div style="text-align:center">
+        <img src="/images/fiverr-qr.png" alt="Scan to hire a web developer on Fiverr"
+             width="240" height="240" style="width:100%;height:auto;border:1px solid #e5e7eb;border-radius:8px">
+        <a href="https://go.fiverr.com/visit/?bta=1141774&brand=fiverrmarketplace&utm_campaign=istaniorg&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fcategories%2Fprogramming-tech%2Fwebsite-development"
+           target="_blank" rel="sponsored noopener"
+           style="display:inline-block;margin-top:12px;padding:12px 16px;border:1px solid #111;border-radius:8px;text-decoration:none">
+          Hire a Web Developer
+        </a>
+        <p style="margin:8px 0 0;font-size:12px;color:#6b7280">Sponsored by Fiverr. Affiliate link.</p>
+      </div>
+    </section>
+  </section>
+
+  <!-- External scripts (Bing UET & Skimlinks) -->
+  <script>
+    (function(w,d,t,r,u){
+      var f,n,i;
+      w[u] = w[u] || [];
+      f = function(){
+        var o = { ti: "187209514", enableAutoSpaTracking: true };
+        o.q = w[u];
+        w[u] = new UET(o);
+        w[u].push("pageLoad");
+      };
+      n = d.createElement(t);
+      n.src = "//bat.bing.com/bat.js";
+      n.async = 1;
+      n.onload = n.onreadystatechange = function(){
+        var s = this.readyState;
+        s && s !== "loaded" && s !== "complete" || (f(), n.onload = n.onreadystatechange = null);
+      };
+      i = d.getElementsByTagName(t)[0];
+      i.parentNode.insertBefore(n, i);
+    })(window,document,"script","//bat.bing.com/bat.js","uetq");
+  </script>
+  <script type="text/javascript" src="https://s.skimresources.com/js/290895X1777925.skimlinks.js"></script>
+
+  <!--
+    Note: To enable Bing’s IndexNow protocol, host a file named
+    “00f096b65a1a49e5a69d3306f13d573d.txt” at the root of your domain containing
+    only the key “00f096b65a1a49e5a69d3306f13d573d”.
+  -->
+</body>
+</html>
