Add Monetag script and Google verification file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     a { color: #0066cc; text-decoration: none; }
     a:hover { text-decoration: underline; }
   </style>
+  <!-- Monetag script -->
+  <script data-cfasync="false" type="text/javascript" src="https://staupsoaksy.net/pfe/current/tag.min.js?z=9809461" async></script>
 </head>
 <body>
   <header>
