feat: add foremedia ad placeholders

--- a/index.html
+++ b/index.html
@@ -97,5 +97,41 @@
     “00f096b65a1a49e5a69d3306f13d573d.txt” at the root of your domain containing
     only the key “00f096b65a1a49e5a69d3306f13d573d”.
   -->
+  <!-- Foremedia ad placeholders -->
+  <div id="foremediaads-c1"></div>
+  <script type="text/javascript" async src="https://platform.foremedia.net/code/60335/c1"></script>
+
+  <div id="foremediaads-c3"></div>
+  <script type="text/javascript" async src="https://platform.foremedia.net/code/60335/c3"></script>
+
+  <div id="foremediaads-c4"></div>
+  <script type="text/javascript" async src="https://platform.foremedia.net/code/60335/c4"></script>
+
+  <div id="foremediaads-c5"></div>
+  <script type="text/javascript" async src="https://platform.foremedia.net/code/60335/c5"></script>
+
+  <div id="foremediaads-e1"></div>
+  <script type="text/javascript" async src="https://platform.foremedia.net/code/60335/e1"></script>
+
+  <div id="foremediaads-footer"></div>
+  <script type="text/javascript" async src="https://platform.foremedia.net/code/60335/footer"></script>
+
+  <div id="foremediaads-footer_float"></div>
+  <script type="text/javascript" async src="https://platform.foremedia.net/code/60335/footer_float"></script>
+
+  <!--
+    Banner Map
+    Banner - C1
+    Logo                                      Banner - C2
+
+                       Menu
+                   Banner - E1
+
+                                               Banner C3
+
+  Content
+                                                Banner C5
+  Related Article             Related Article  Related Article
+  -->
 </body>
 </html>
