--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ISTANI Fitness – Smart Tools & Picks</title>
   <meta name="description" content="ISTANI: science-based fitness tips, product recommendations, and smart calculators." />
+  <!-- Google AdSense account verification -->
+  <meta name="google-adsense-account" content="ca-pub-2695159317297870">
   <!-- AdSense script (load once in <head>) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2695159317297870" crossorigin="anonymous"></script>
   <!-- Google Custom Search Engine script -->
