--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ISTANI Fitness – Smart Tools & Picks</title>
-  <meta name="description" content="ISTANI: science-based fitness tips, product recommendations, and smart calculators." />
+  <meta
+    name="description"
+    content="ISTANI: science-based fitness tips, product recommendations, and smart calculators."
+  />
   <!-- AdSense script (load once in <head>) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2695159317297870" crossorigin="anonymous"></script>
   <!-- Google Custom Search Engine script -->
@@ -65,24 +68,72 @@
   <section>
     <h2>Need a Web Developer?</h2>
     <p>Hire a professional to build or improve your website via Fiverr:</p>
-    <section style="max-width:980px;margin:24px auto;padding:16px;border:1px solid #e5e7eb;border-radius:12px;font-family:system-ui,Arial;display:grid;grid-template-columns:1fr 260px;gap:16px">
-      <a href="https://go.fiverr.com/visit/?bta=1141774&brand=fiverrmarketplace&utm_campaign=istaniorg&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fcategories%2Fprogramming-tech%2Fwebsite-development"
-         target="_blank" rel="sponsored noopener" style="display:block">
-        <img src="/images/webdev-hero.jpg"
-             alt="Find pro web developers on Fiverr"
-             style="width:100%;height:auto;border-radius:10px;display:block">
+    <p>
+      <a
+        href="https://go.fiverr.com/visit/?bta=1141768&brand=fiverrmarketplace"
+        target="_top"
+        rel="sponsored noopener"
+        >Explore Fiverr marketplace</a
+      >
+    </p>
+    <p>
+      <a
+        href="https://go.fiverr.com/visit/?bta=1141768&nci=17040"
+        target="_top"
+        rel="sponsored noopener"
+      >
+        <img
+          src="https://fiverr.ck-cdn.com/tn/serve/?cid=42587682"
+          alt="Find services on Fiverr"
+          width="321"
+          height="1201"
+          style="max-width:100%;height:auto;border:0"
+          onerror="this.style.display='none';document.getElementById('fiverr-fallback').style.display='block';"
+        />
       </a>
-      <div style="text-align:center">
-        <img src="/images/fiverr-qr.png" alt="Scan to hire a web developer on Fiverr"
-             width="240" height="240" style="width:100%;height:auto;border:1px solid #e5e7eb;border-radius:8px">
-        <a href="https://go.fiverr.com/visit/?bta=1141774&brand=fiverrmarketplace&utm_campaign=istaniorg&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fcategories%2Fprogramming-tech%2Fwebsite-development"
-           target="_blank" rel="sponsored noopener"
-           style="display:inline-block;margin-top:12px;padding:12px 16px;border:1px solid #111;border-radius:8px;text-decoration:none">
-          Hire a Web Developer
-        </a>
-        <p style="margin:8px 0 0;font-size:12px;color:#6b7280">Sponsored by Fiverr. Affiliate link.</p>
-      </div>
-    </section>
+    </p>
+    <div id="fiverr-fallback" style="display:none;">
+      <p>If the banner above does not load, try these links:</p>
+      <p>
+        <a
+          href="https://go.fiverr.com/visit/?bta=1141768&nci=17040"
+          target="_blank"
+          rel="sponsored noopener"
+          >Direct Fiverr link</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://go.fiverr.com/visit/?bta=1141768&brand=fp&landingPage=istani.org"
+          target="_blank"
+          rel="sponsored noopener"
+          >Alternate landing page</a
+        >
+      </p>
+    </div>
+    <noscript>
+      <p>
+        <a
+          href="https://go.fiverr.com/visit/?bta=1141768&brand=fiverrmarketplace"
+          rel="sponsored noopener"
+          >Explore Fiverr marketplace</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://go.fiverr.com/visit/?bta=1141768&nci=17040"
+          rel="sponsored noopener"
+          >Direct Fiverr link</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://go.fiverr.com/visit/?bta=1141768&brand=fp&landingPage=istani.org"
+          rel="sponsored noopener"
+          >Alternate landing page</a
+        >
+      </p>
+    </noscript>
   </section>
 
   <!-- External scripts (Bing UET & Skimlinks) -->
