--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ISTANI Fitness – Smart Tools & Picks</title>
-  <meta name="description" content="ISTANI: science-based fitness tips, product recommendations, and smart calculators." />
+  <meta name="description" content="ISTANI: science-based fitness tips, product recommendations, and smart calculators.">
+  <!-- Monetag site verification tag for ownership checks -->
+  <meta name="monetag" content="321b3aa6e32363b6b418566ee1d027e2">
   <!-- AdSense script (load once in <head>) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2695159317297870" crossorigin="anonymous"></script>
   <!-- Google Custom Search Engine script -->
