Clarify Monetag verification tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ISTANI Fitness – Smart Tools & Picks</title>
   <meta name="description" content="ISTANI: science-based fitness tips, product recommendations, and smart calculators." />
+  <!-- Monetag site verification tag for ownership checks (do not remove) -->
+  <meta name="monetag" content="6f7a81b3f07fc97b42347e89b25765b0" />
   <!-- AdSense script (load once in <head>) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2695159317297870" crossorigin="anonymous"></script>
   <!-- Google Custom Search Engine script -->
